# dm-tool

./: .gitignore  Cargo.toml  LICENSE  README.md  eslint.config.mjs  lerna.json  package-lock.json  package.json
.github/: dependabot.yml
.github/workflows/: on-pull.yml  on-push.yml
src/: main.rs
src/dice/: dice_expression_parser.rs  dice_roller.rs  die_roller.rs  mod.rs
src/handlers/: get_monster.rs  list_dice.rs  list_monsters.rs  mod.rs  roll_attack.rs  roll_dice.rs  roll_saving_throw.rs  roll_skill.rs  roll_stat.rs
src/monsters/: mod.rs  monster.rs  search.rs
src/parsers/: dice_expression_parser.rs  mod.rs
src/state/: mod.rs
src/stats/: mod.rs  modifier_extractor.rs  stat_roller.rs
src/utilities/: dice_roller.rs  die_roller.rs  index.rs  load_from_json.rs  mod.rs
workspaces/mcp-server/: package.json  tsconfig.json
workspaces/mcp-server/src/: index.ts  invoke-dm-tool-api.ts
workspaces/monster-tool/: monsters.json  package.json
workspaces/monster-tool/src/: index.ts
workspaces/monster-tool/src/constants/: general.ts  types.ts
workspaces/monster-tool/src/transformers/: transform-ac.ts  transform-actions.ts  transform-alignment.ts  transform-challenge.ts  transform-creature-type.ts  transform-hit-dice.ts  transform-languages.ts  transform-legendary-actions.ts  transform-max-hit-points.ts  transform-modifiers.ts  transform-monster.ts  transform-reactions.ts  transform-saving-throws.ts  transform-size.ts  transform-skills.ts  transform-speed.ts  transform-stats.ts  transform-traits.ts
workspaces/monster-tool/src/utilities/: guards.ts  (+4 more)
