[package]
name = "dm-tool"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.8"
tokio = { version = "1.48.0", features = ["full"] }
serde = { version = "1.0.228", features = ["derive"] }
regex = "1.12.2"
rand = "0.9.2"
enum-iterator = "2.3.0"
serde_json = "1.0.148"
strum_macros = "0.27.2"
tracing = "0.1.44"
tracing-subscriber = "0.3.20"
tower-http = { version = "0.6.8", features = ["trace"] }

[dev-dependencies]
